--- a/index.html
+++ b/index.html
@@ -687,6 +687,268 @@
         </div>
     </section>
 
+    <section class="padding-bottom padding-top">
+        <div class="container-xl">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h2 class="h2" data-aos="fade-up">Comprehensive <br class="d-none d-lg-block"> Business Solutions
+                    </h2>
+                </div>
+                <div class="col-lg-6">
+                    <p class="paragraph" data-aos="fade-up">
+                        is dedicated to empowering businesses with the strategic expertise they need to thrive in
+                        today’s competitive landscape. Our team of seasoned professionals offers a full spectrum of
+                        consultancy services, including strategic planning, market analysis, financial consulting, and
+                        business development.
+                    </p>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-lg-4">
+                    <div class="white-dec">
+                        <h3 class="fs-5 font-weight-600" data-aos="fade-up">Consultancy & Operations</h3>
+                        <div class="devider my-3" data-aos="fade-up"></div>
+                        <ul data-aos="fade-up">
+                            <li data-aos="fade-up" data-aos-duration="1000">Corporate Strategy</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Logistics & Supply Chain</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Employee Assessment & Coaching</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Tailored Training & Mentoring</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Data Tools & Automation</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Advanced Analytics</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Sustainability</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Technology Integration</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Corporate events management</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Resourcing</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="white-dec">
+                        <h3 class="fs-5 font-weight-600" data-aos="fade-up">Sales & Marketing</h3>
+                        <div class="devider my-3" data-aos="fade-up"></div>
+                        <ul data-aos="fade-up">
+                            <li data-aos="fade-up" data-aos-duration="1000">Brand Strategies</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Channel & Go-to-market Strategies</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Brand Positioning</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Market Research</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">New Products & Services</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">E-commerce Optimization</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Social Media Management</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Content Creation</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Digital Marketing</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Web3</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="white-dec">
+                        <h3 class="fs-5 font-weight-600" data-aos="fade-up">Expansion & Market Entry</h3>
+                        <div class="devider my-3" data-aos="fade-up"></div>
+                        <ul data-aos="fade-up">
+                            <li data-aos="fade-up" data-aos-duration="1000">Market Entry in Middle East & Africa</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Products Sourcing Solutions</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Enhanced Distribution Coverage</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Regulatory & Compliance Guidance</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Distributor & Customer Identification</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Whitespace Opportunity Exploration</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Localization Strategies</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Competitive Landscape Analysis</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Expert Contract Negotiation</li>
+                            <li data-aos="fade-up" data-aos-duration="1000">Post-Entry Market Support</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="padding-bottom padding-top bg-main-hero">
+        <div class="container-xl">
+            <h5 data-aos="fade-up">STRATEGIES FOR ACHIEVING LASTING FREEDOM</h5>
+            <h2 class="h2 text-white my-4" data-aos="fade-up">Contact Us and get the best<br class="d-none d-lg-block">
+                Service on the market</h2>
+            <div class="d-flex justify-content-center">
+                <a href="contact.html" class="btn-primary" data-aos="fade-up" data-aos-duration="1000">
+                    Get started now
+                    <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_30_3206)">
+                            <g clip-path="url(#clip1_30_3206)">
+                                <g clip-path="url(#clip2_30_3206)">
+                                    <path
+                                        d="M8.46838 4.92826C6.95265 5.06918 3.81712 6.2398 2.95214 9.76873C2.91106 9.93632 3.09396 10.0673 3.24699 9.98758C4.15779 9.5131 5.64863 8.96474 6.4844 9.47101M8.46838 4.92826C7.63954 6.10229 6.9509 7.59367 6.4844 9.47101M8.46838 4.92826C9.6684 3.22844 11.1623 2.19387 12.7014 1.61632M6.4844 9.47101C6.46027 9.56811 6.43673 9.66624 6.41381 9.76542M12.7014 1.61632C14.5273 0.93113 16.4168 0.889188 17.9545 1.1428C18.6865 1.26352 19.2313 1.86437 19.3263 2.60012C19.595 4.68019 19.4099 6.42321 18.9095 7.87739M12.7014 1.61632L18.9095 7.87739M6.41381 9.76542C6.22851 10.5669 6.08276 11.4364 5.98256 12.379C5.95128 12.6732 6.05825 12.9645 6.26745 13.1737L7.40347 14.3097C7.59101 14.4973 7.84535 14.6044 8.11043 14.596C8.91992 14.5703 9.83046 14.469 10.7746 14.2686M6.41381 9.76542L10.7746 14.2686M15.6117 12.2265C15.6117 13.9933 14.6151 17.4771 10.6846 17.6722C10.5302 17.6799 10.4318 17.5128 10.504 17.3761C11.0007 16.4366 11.6248 14.8536 11.087 14.1989M15.6117 12.2265C14.2247 13.2152 12.6218 13.8396 11.087 14.1989M15.6117 12.2265C17.047 11.2035 18.2512 9.79033 18.9095 7.87739M11.087 14.1989C10.9825 14.2233 10.8783 14.2466 10.7746 14.2686M5.9374 15.0423C4.61817 13.7231 1.97972 13.7231 1.53998 19C3.73869 19 7.69637 17.6808 5.9374 15.0423ZM14.2925 6.24749C13.5712 5.49187 12.5418 5.25719 11.6541 5.80774C10.6221 6.44775 10.4857 7.91449 11.2143 8.88594C11.9429 9.85739 13.3798 10.1266 14.2925 9.32568C15.196 8.53278 15.1225 7.11704 14.2925 6.24749Z"
+                                        stroke="white" stroke-linecap="round" />
+                                </g>
+                            </g>
+                        </g>
+                        <defs>
+                            <clipPath id="clip0_30_3206">
+                                <rect width="20" height="20" fill="white" transform="translate(0.539978)" />
+                            </clipPath>
+                            <clipPath id="clip1_30_3206">
+                                <rect width="20" height="20" fill="white" transform="translate(0.539978)" />
+                            </clipPath>
+                            <clipPath id="clip2_30_3206">
+                                <rect width="20" height="20" fill="white" transform="translate(0.539978)" />
+                            </clipPath>
+                        </defs>
+                    </svg>
+
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="py-5">
+        <div class="container-xl">
+            <div class="row d-flex justify-content-center align-items-center">
+                <div class="col-lg-2 col-6 mb-3 mb-lg-0" data-aos="fade-up">
+                    <div class="logo-box">
+                        <img src="img/l_1.webp">
+                    </div>
+                </div>
+                <div class="col-lg-2 col-6 mb-3 mb-lg-0" data-aos="fade-up">
+                    <div class="logo-box">
+                        <img src="img/l_2.webp">
+                    </div>
+                </div>
+                <div class="col-lg-2 col-6 mb-3 mb-lg-0" data-aos="fade-up">
+                    <div class="logo-box">
+                        <img src="img/l_3.webp">
+                    </div>
+                </div>
+                <div class="col-lg-2 col-6 mb-3 mb-lg-0" data-aos="fade-up">
+                    <div class="logo-box">
+                        <img src="img/l_4.webp">
+                    </div>
+                </div>
+                <div class="col-lg-2 col-6 mb-3 mb-lg-0" data-aos="fade-up">
+                    <div class="logo-box">
+                        <img src="img/l_5.webp">
+                    </div>
+                </div>
+                <div class="col-lg-2 col-6 mb-3 mb-lg-0" data-aos="fade-up">
+                    <div class="logo-box">
+                        <img src="img/l_6.webp">
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section class="py-5 bg-contact">
+        <div class="container-xl">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h2 class="font-weight-600 text-white text-left" data-aos="fade-up">Let's discuss with our<br
+                            class="d-none d-lg-block">
+                        expert team</h2>
+                </div>
+                <div class="col-lg-6 d-flex justify-content-lg-end" data-aos="fade-up">
+                    <div class="d-flex align-items-center gap-3">
+                        <div>
+                            <svg width="90" height="91" viewBox="0 0 90 91" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <rect y="0.5" width="90" height="90" rx="45" fill="url(#paint0_linear_4_1745)" />
+                                <g clip-path="url(#clip0_4_1745)">
+                                    <g clip-path="url(#clip1_4_1745)">
+                                        <g clip-path="url(#clip2_4_1745)">
+                                            <path d="M60 30.5L43.5 47" stroke="white" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                            <path d="M60 30.5L49.5 60.5L43.5 47L30 41L60 30.5Z" stroke="white"
+                                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                        </g>
+                                    </g>
+                                </g>
+                                <defs>
+                                    <linearGradient id="paint0_linear_4_1745" x1="0" y1="45.5" x2="90" y2="45.5"
+                                        gradientUnits="userSpaceOnUse">
+                                        <stop offset="0.12" stop-color="#47B298" />
+                                        <stop offset="1" stop-color="#444B90" stop-opacity="0.92" />
+                                    </linearGradient>
+                                    <clipPath id="clip0_4_1745">
+                                        <rect width="32" height="32" fill="white" transform="translate(29 29.5)" />
+                                    </clipPath>
+                                    <clipPath id="clip1_4_1745">
+                                        <rect width="32" height="32" fill="white" transform="translate(29 29.5)" />
+                                    </clipPath>
+                                    <clipPath id="clip2_4_1745">
+                                        <rect width="32" height="32" fill="white" transform="translate(29 29.5)" />
+                                    </clipPath>
+                                </defs>
+                            </svg>
+
+                        </div>
+                        <div class="text-white">
+                            <h3 class="fs-5">Have any query!</h3>
+                            <a href="mailto:info@socialkapita.com" class="text-white">info@socialkapita.com</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="padding-bottom padding-top text-center">
+        <div class="container-xl">
+            <a href="index.html" class="barnd" data-aos="fade-up">
+                <img src="img/logo-footer.svg" alt="">
+            </a>
+            <ul class="main-menu py-5 d-flex flex-lg-row flex-column" data-aos="fade-up">
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#about-us">About Us</a>
+                </li>
+                <li>
+                    <a href="#service">Serices</a>
+                </li>
+                <li>
+                    <a href="#partner">Partner</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+            <div class="social gap-3 d-flex align-items-center justify-content-center mb-5" data-aos="fade-up">
+                <a href="#">
+                    <svg width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="23" cy="23" r="23" fill="#3E5064" />
+                        <path
+                            d="M13.5 23C13.5 18.5217 13.5 16.2825 14.8912 14.8912C16.2825 13.5 18.5217 13.5 23 13.5C27.4783 13.5 29.7175 13.5 31.1088 14.8912C32.5 16.2825 32.5 18.5217 32.5 23C32.5 27.4783 32.5 29.7175 31.1088 31.1088C29.7175 32.5 27.4783 32.5 23 32.5C18.5217 32.5 16.2825 32.5 14.8912 31.1088C13.5 29.7175 13.5 27.4783 13.5 23Z"
+                            stroke="white" stroke-width="1.5" stroke-linejoin="round" />
+                        <path
+                            d="M27.9265 19.0264H24.9816C23.9378 19.0264 23.0894 19.8685 23.0817 20.9123L22.9964 32.4268M21.082 25.0017H25.8847"
+                            stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                </a>
+                <a href="#">
+                    <svg width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="23" cy="23" r="23" fill="#3E5064"/>
+                        <path d="M18 21V28" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M22 24V28M22 24C22 22.3431 23.3431 21 25 21C26.6569 21 28 22.3431 28 24V28M22 24V21" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M18.008 18H17.999" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M13.5 23C13.5 18.5217 13.5 16.2825 14.8912 14.8912C16.2825 13.5 18.5217 13.5 23 13.5C27.4783 13.5 29.7175 13.5 31.1088 14.8912C32.5 16.2825 32.5 18.5217 32.5 23C32.5 27.4783 32.5 29.7175 31.1088 31.1088C29.7175 32.5 27.4783 32.5 23 32.5C18.5217 32.5 16.2825 32.5 14.8912 31.1088C13.5 29.7175 13.5 27.4783 13.5 23Z" stroke="white" stroke-width="1.5" stroke-linejoin="round"/>
+                        </svg>
+                        
+                </a>
+                <a href="#">
+                    <svg width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="23" cy="23" r="23" fill="#3E5064"/>
+                        <path d="M13.5 23C13.5 18.5217 13.5 16.2825 14.8912 14.8912C16.2825 13.5 18.5217 13.5 23 13.5C27.4783 13.5 29.7175 13.5 31.1088 14.8912C32.5 16.2825 32.5 18.5217 32.5 23C32.5 27.4783 32.5 29.7175 31.1088 31.1088C29.7175 32.5 27.4783 32.5 23 32.5C18.5217 32.5 16.2825 32.5 14.8912 31.1088C13.5 29.7175 13.5 27.4783 13.5 23Z" stroke="white" stroke-width="1.5" stroke-linejoin="round"/>
+                        <path d="M27.5 23C27.5 25.4853 25.4853 27.5 23 27.5C20.5147 27.5 18.5 25.4853 18.5 23C18.5 20.5147 20.5147 18.5 23 18.5C25.4853 18.5 27.5 20.5147 27.5 23Z" stroke="white" stroke-width="1.5"/>
+                        <path d="M28.5078 17.5H28.4988" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        
+                </a>
+            </div>
+            <div class="text-center w-100 fs-6 opacity-50" data-aos="fade-up">
+                Copyright © 2024, Social Kapita. Designed with <a href="contact.html">❤️</a> Timelino
+            </div>
+        </div>
+    </footer>
+
     <!-- Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
