--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     </section>
 
     <!-- stripe -->
-    <section class="stripe-banner d-flex justify-content-lg-around align-items-center scroll-h">
+    <section id="about-us" class="stripe-banner d-flex justify-content-lg-around align-items-center scroll-h">
         <div class="d-flex align-items-center gap-2 w-100 text-center justify-content-center px-4 px-lg-0">
             <div><svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -429,7 +429,7 @@
         </div>
     </section>
 
-    <section class="padding-bottom padding-top bg-hero">
+    <section id="service" class="padding-bottom padding-top bg-hero">
         <div class="container-xl">
             <div class="row">
                 <div class="col-lg-6">
@@ -798,7 +798,7 @@
         </div>
     </section>
 
-    <section class="py-5">
+    <section class="py-5" id="partner">
         <div class="container-xl">
             <div class="row d-flex justify-content-center align-items-center">
                 <div class="col-lg-2 col-6 mb-3 mb-lg-0" data-aos="fade-up">
