--- a/index.html
+++ b/index.html
@@ -93,19 +93,19 @@
                 <div class="offcanvas-body">
                     <ul class="main-menu">
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="index.html" class="mobile-menu-close">Home</a>
                         </li>
                         <li>
-                            <a href="#about-us">About Us</a>
+                            <a href="#about-us" class="mobile-menu-close">About Us</a>
                         </li>
                         <li>
-                            <a href="#service">Serices</a>
+                            <a href="#service" class="mobile-menu-close">Serices</a>
                         </li>
                         <li>
-                            <a href="#partner">Partner</a>
+                            <a href="#partner" class="mobile-menu-close">Partner</a>
                         </li>
                         <li>
-                            <a href="contact.html">Contact</a>
+                            <a href="contact.html" class="mobile-menu-close">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -422,6 +422,23 @@
                         <div>
                             <h3 class="h3">Our Values </h3>
                             <p class="paragraph">The foundation of everything we do</p>
+                            <div class="row">
+                                <div class="col-lg-6 mb-3">
+                                    <div class="box-value">Integrity</div>
+                                </div>
+                                <div class="col-lg-6  mb-3">
+                                    <div class="box-value">Collaboration</div>
+                                </div>
+                                <div class="col-lg-6  mb-3">
+                                    <div class="box-value">Innovation</div>
+                                </div>
+                                <div class="col-lg-6  mb-3">
+                                    <div class="box-value">Excellence</div>
+                                </div>
+                                <div class="col-lg-6  mb-3">
+                                    <div class="box-value">Sustainability</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -925,22 +942,32 @@
                 </a>
                 <a href="#">
                     <svg width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="23" cy="23" r="23" fill="#3E5064"/>
-                        <path d="M18 21V28" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M22 24V28M22 24C22 22.3431 23.3431 21 25 21C26.6569 21 28 22.3431 28 24V28M22 24V21" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M18.008 18H17.999" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M13.5 23C13.5 18.5217 13.5 16.2825 14.8912 14.8912C16.2825 13.5 18.5217 13.5 23 13.5C27.4783 13.5 29.7175 13.5 31.1088 14.8912C32.5 16.2825 32.5 18.5217 32.5 23C32.5 27.4783 32.5 29.7175 31.1088 31.1088C29.7175 32.5 27.4783 32.5 23 32.5C18.5217 32.5 16.2825 32.5 14.8912 31.1088C13.5 29.7175 13.5 27.4783 13.5 23Z" stroke="white" stroke-width="1.5" stroke-linejoin="round"/>
-                        </svg>
-                        
+                        <circle cx="23" cy="23" r="23" fill="#3E5064" />
+                        <path d="M18 21V28" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                        <path d="M22 24V28M22 24C22 22.3431 23.3431 21 25 21C26.6569 21 28 22.3431 28 24V28M22 24V21"
+                            stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                        <path d="M18.008 18H17.999" stroke="white" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                        <path
+                            d="M13.5 23C13.5 18.5217 13.5 16.2825 14.8912 14.8912C16.2825 13.5 18.5217 13.5 23 13.5C27.4783 13.5 29.7175 13.5 31.1088 14.8912C32.5 16.2825 32.5 18.5217 32.5 23C32.5 27.4783 32.5 29.7175 31.1088 31.1088C29.7175 32.5 27.4783 32.5 23 32.5C18.5217 32.5 16.2825 32.5 14.8912 31.1088C13.5 29.7175 13.5 27.4783 13.5 23Z"
+                            stroke="white" stroke-width="1.5" stroke-linejoin="round" />
+                    </svg>
+
                 </a>
                 <a href="#">
                     <svg width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="23" cy="23" r="23" fill="#3E5064"/>
-                        <path d="M13.5 23C13.5 18.5217 13.5 16.2825 14.8912 14.8912C16.2825 13.5 18.5217 13.5 23 13.5C27.4783 13.5 29.7175 13.5 31.1088 14.8912C32.5 16.2825 32.5 18.5217 32.5 23C32.5 27.4783 32.5 29.7175 31.1088 31.1088C29.7175 32.5 27.4783 32.5 23 32.5C18.5217 32.5 16.2825 32.5 14.8912 31.1088C13.5 29.7175 13.5 27.4783 13.5 23Z" stroke="white" stroke-width="1.5" stroke-linejoin="round"/>
-                        <path d="M27.5 23C27.5 25.4853 25.4853 27.5 23 27.5C20.5147 27.5 18.5 25.4853 18.5 23C18.5 20.5147 20.5147 18.5 23 18.5C25.4853 18.5 27.5 20.5147 27.5 23Z" stroke="white" stroke-width="1.5"/>
-                        <path d="M28.5078 17.5H28.4988" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                        
+                        <circle cx="23" cy="23" r="23" fill="#3E5064" />
+                        <path
+                            d="M13.5 23C13.5 18.5217 13.5 16.2825 14.8912 14.8912C16.2825 13.5 18.5217 13.5 23 13.5C27.4783 13.5 29.7175 13.5 31.1088 14.8912C32.5 16.2825 32.5 18.5217 32.5 23C32.5 27.4783 32.5 29.7175 31.1088 31.1088C29.7175 32.5 27.4783 32.5 23 32.5C18.5217 32.5 16.2825 32.5 14.8912 31.1088C13.5 29.7175 13.5 27.4783 13.5 23Z"
+                            stroke="white" stroke-width="1.5" stroke-linejoin="round" />
+                        <path
+                            d="M27.5 23C27.5 25.4853 25.4853 27.5 23 27.5C20.5147 27.5 18.5 25.4853 18.5 23C18.5 20.5147 20.5147 18.5 23 18.5C25.4853 18.5 27.5 20.5147 27.5 23Z"
+                            stroke="white" stroke-width="1.5" />
+                        <path d="M28.5078 17.5H28.4988" stroke="white" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                    </svg>
+
                 </a>
             </div>
             <div class="text-center w-100 fs-6 opacity-50" data-aos="fade-up">
@@ -957,6 +984,7 @@
     <script>
         AOS.init();
     </script>
+ 
 </body>
 
 </html>
